--- a/package.json
+++ b/package.json
@@ -11,24 +11,26 @@
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
+    "@graphql-tools/schema": "^9.0.10",
     "@hapi/iron": "^7.0.0",
-    "@keystone-6/auth": "^4.0.1",
-    "@keystone-6/cloudinary": "^4.0.1",
-    "@keystone-6/core": "^2.2.0",
-    "@keystone-6/fields-document": "^5.0.0",
-    "@keystone-ui/core": "^5.0.1",
-    "@mantine/core": "^5.2.3",
-    "@mantine/dates": "^5.2.3",
-    "@mantine/form": "^5.2.3",
-    "@mantine/hooks": "^5.2.3",
-    "@mantine/modals": "^5.2.3",
-    "@mantine/next": "^5.2.3",
-    "@mantine/notifications": "^5.2.3",
+    "@keystone-6/auth": "^5.0.1",
+    "@keystone-6/cloudinary": "^5.0.1",
+    "@keystone-6/core": "^3.1.1",
+    "@keystone-6/fields-document": "^5.0.2",
+    "@keystone-ui/core": "^5.0.2",
+    "@mantine/core": "^5.8.3",
+    "@mantine/dates": "^5.8.3",
+    "@mantine/form": "^5.8.3",
+    "@mantine/hooks": "^5.8.3",
+    "@mantine/modals": "^5.8.3",
+    "@mantine/next": "^5.8.3",
+    "@mantine/notifications": "^5.8.3",
     "dayjs": "^1.11.5",
     "dotenv": "^16.0.0",
     "execa": "^6.1.0",
     "graphql-request": "^4.3.0",
-    "next": "12.2.4",
+    "graphql-yoga": "^3.1.0",
+    "next": "^12.2.4",
     "nodemailer": "^6.7.1",
     "pluralize": "^8.0.0",
     "react": "18.2.0",
@@ -42,8 +44,5 @@
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "typescript": "^4.4.4"
-  },
-  "resolutions": {
-    "next": "12.2.4"
   }
 }
